// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders error state 1`] = `
<Radio.Group>
  <Label>
    Choose one
    <Error
      error="error message"
    />
  </Label>
  <Radio
    checked={false}
    disabled={false}
    id="example-one"
    key="example-one"
    label="Option One"
    name="example"
    value="one"
  />
  <Radio
    checked={false}
    disabled={false}
    id="example-two"
    key="example-two"
    label="Option Two"
    name="example"
    value="two"
  />
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Radio
    checked={false}
    disabled={false}
    id="example-one"
    key="example-one"
    label="Option One"
    name="example"
    value="one"
  />
  <Radio
    checked={false}
    disabled={false}
    id="example-two"
    key="example-two"
    label="Option Two"
    name="example"
    value="two"
  />
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons with first option checked 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Radio
    checked={true}
    disabled={false}
    id="example-one"
    key="example-one"
    label="Option One"
    name="example"
    value="one"
  />
  <Radio
    checked={false}
    disabled={false}
    id="example-two"
    key="example-two"
    label="Option Two"
    name="example"
    value="two"
  />
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons with second option disabled 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Radio
    checked={false}
    disabled={false}
    id="example-one"
    key="example-one"
    label="Option One"
    name="example"
    value="one"
  />
  <Radio
    checked={false}
    disabled={true}
    id="example-two"
    key="example-two"
    label="Option Two"
    name="example"
    value="two"
  />
</Radio.Group>
`;
